Corregir renderizado de GIF en pantalla principal

--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
           Educatrivia es un espacio lúdico destinado a la puesta en práctica del
           conocimiento y la educación. Dale click y aceptá el desafío.
         </p>
-        <img id="arrow" src="./static/arrow-pointing.gif" alt="" srcset="" />
+        <img id="arrow" src="/static/arrow-pointing.gif" alt="" srcset="" />
       </div>
       <a href="trivia.html" class="button-82-pushable" role="button">
         <span class="button-82-shadow"></span>
