--- a/styles/style.css
+++ b/styles/style.css
@@ -106,6 +106,7 @@ body {
   letter-spacing: 1.5vw;
   color: hsl(180, 0%, 100%);
   line-height: 1;
+  white-space: nowrap; /* Evita que el texto se divida en varias líneas */
 }
 
 .staircase-title span {
